force-app/main/default/objects/Account/fields/Donor_Confidential_Prayer__c.field-meta.xml
<CustomField>
    <fullName>Donor_Confidential_Prayer__c</fullName>
    <label>Donor Confidential Prayer</label>
    <type>TextArea</type>
</CustomField>