force-app/main/default/objects/Account/fields/Donor_Fund_Events__c.field-meta.xml
<CustomField>
    <fullName>Donor_Fund_Events__c</fullName>
    <description>Development mail code for donor led events such as getaways.</description>
    <inlineHelpText>Getaways</inlineHelpText>
    <label>Donor Fund Events</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>