force-app/main/default/objects/Account/fields/Donor_Gifts__c.field-meta.xml
<CustomField>
    <fullName>Donor_Gifts__c</fullName>
    <description>Development mail code for gifts/free products.</description>
    <inlineHelpText>Calendar, Christmas Garland</inlineHelpText>
    <label>Donor Gifts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>