force-app/main/default/objects/Account/fields/Donor_Info_Mail_Update__c.field-meta.xml
<CustomField>
    <fullName>Donor_Info_Mail_Update__c</fullName>
    <inlineHelpText>Development mail code for INFO mailings only — no ask is made. Example: news about resources or supreme court rulings.</inlineHelpText>
    <label>Annual Impact Report</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>