force-app/main/default/objects/Account/fields/Donor_Letter_1__c.field-meta.xml
<CustomField>
    <fullName>Donor_Letter_1__c</fullName>
    <description>Development mail code for appeal letters (ask &amp; no ask versions).</description>
    <inlineHelpText>High Urgency Campaigns</inlineHelpText>
    <label>Dec/May/Aug Appeal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Dec/May</fullName>
            </value>
            <value>
                <fullName>Dec/May/Aug</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>