force-app/main/default/objects/Account/fields/Donor_Letter_2__c.field-meta.xml
<CustomField>
    <fullName>Donor_Letter_2__c</fullName>
    <description>Mail code used when more than one letter goes out for the month (match, FYE, etc)</description>
    <inlineHelpText>Mail code used when more than one letter goes out for the month (match, FYE, etc)</inlineHelpText>
    <label>Donor Letter 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ask</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
                <default>true</default>
                <label>Hold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>