force-app/main/default/objects/Account/fields/Donor_Level__c.field-meta.xml
<CustomField>
    <fullName>Donor_Level__c</fullName>
    <formula>TEXT(Donor_Caseload_Lookup__r.Donor_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Level</label>
    <type>Text</type>
</CustomField>