force-app/main/default/objects/Account/fields/Donor_Ministry_Reports__c.field-meta.xml
<CustomField>
    <fullName>Donor_Ministry_Reports__c</fullName>
    <description>Development mail code specifically for the FamilyLifeLine newsletter.</description>
    <inlineHelpText>Env=Hard Ask; QR=Soft Ask</inlineHelpText>
    <label>Donor Newsletters</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Envelope</fullName>
            </value>
            <value>
                <fullName>QR Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>