force-app/main/default/objects/Account/fields/Donor_Rep__c.field-meta.xml
<CustomField>
    <fullName>Donor_Rep__c</fullName>
    <formula>Donor_Caseload_Lookup__r.Donor_Rep_User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Rep</label>
    <type>Text</type>
</CustomField>