force-app/main/default/objects/Account/fields/DRep_Code__c.field-meta.xml
<CustomField>
    <fullName>DRep_Code__c</fullName>
    <description>Donor Rep Code from Donor Caseload object</description>
    <formula>Donor_Caseload_Lookup__r.Donor_Caseload_Code__c</formula>
    <inlineHelpText>Donor Rep Code from Donor Caseload object</inlineHelpText>
    <label>DRep Code</label>
    <type>Text</type>
</CustomField>