force-app/main/default/objects/Account/fields/DSAR_Purge__c.field-meta.xml
<CustomField>
    <fullName>DSAR_Purge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to trigger a Flow to delete the account; necessary step in the DSAR Deletion process to avoid cascade deletes.</description>
    <label>DSAR Purge</label>
    <type>Checkbox</type>
</CustomField>