force-app/main/default/objects/Account/fields/Dynamics_DD_ID__c.field-meta.xml
<CustomField>
    <fullName>Dynamics_DD_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Dynamics Donor Direct ID. Will be used later for deduping purposes.</inlineHelpText>
    <label>Dynamics DD ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>