force-app/main/default/objects/Account/fields/EDI_CheckDataConflictDate__c.field-meta.xml
<CustomField>
    <fullName>EDI_CheckDataConflictDate__c</fullName>
    <label>EDI Check Data Conflict Date</label>
    <type>DateTime</type>
</CustomField>