force-app/main/default/objects/Account/fields/ERT_Registration_Id__c.field-meta.xml
<CustomField>
    <fullName>ERT_Registration_Id__c</fullName>
    <label>ERT Registration Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>