force-app/main/default/objects/Account/fields/Estate_Will__c.field-meta.xml
<CustomField>
    <fullName>Estate_Will__c</fullName>
    <description>Donors who have us in their Estate or Will</description>
    <inlineHelpText>Donors who have put FamilyLife in their Estate or Will (Heritage Partner) -- Donor Team Only use.  
NOTE:  This field is automatically marked &quot;YES&quot; when a Heritage Partner Opportunity is set to &quot;Closed/Won.&quot;</inlineHelpText>
    <label>Estate/Will</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Shown Interest</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>