force-app/main/default/objects/Account/fields/Event_Area_Code_LU__c.field-meta.xml
<CustomField>
    <fullName>Event_Area_Code_LU__c</fullName>
    <formula>Event_Zip_Code_Look_Up__r.Event_Area_Code__r.Name</formula>
    <label>Event Area Code</label>
    <type>Text</type>
</CustomField>