force-app/main/default/objects/Account/fields/Event_Territory_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_Territory_Code__c</fullName>
    <description>Event territory code</description>
    <formula>TEXT(Event_Zip_Code_Look_Up__r.Event_Area_Code__r.Event_Territory_Code__c)</formula>
    <label>Event Territory Code</label>
    <type>Text</type>
</CustomField>