force-app/main/default/objects/Account/fields/Event_Zip_Code_Look_Up__c.field-meta.xml
<CustomField>
    <fullName>Event_Zip_Code_Look_Up__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter zip code to see FL Event Area Code and other assignments</inlineHelpText>
    <label>Event Zip Code Look Up</label>
    <referenceTo>Zip_Code_Assignments__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>