force-app/main/default/objects/Account/fields/Exclude_from_Dedupe__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Dedupe__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For DemandTools dedupe purposes only</inlineHelpText>
    <label>Exclude from Dedupe</label>
    <type>Checkbox</type>
</CustomField>