force-app/main/default/objects/Account/fields/Exclude_From_MDM_Sync__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_MDM_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude From MDM Sync</label>
    <type>Checkbox</type>
</CustomField>