force-app/main/default/objects/Account/fields/Facebook_URL__c.field-meta.xml
<CustomField>
    <fullName>Facebook_URL__c</fullName>
    <description>Copy the entire link to the Facebook page associated with this account here.  This field is different than the Facebook connection at the top of the Account screen in that this allows reporting and posting to multiple Facebook pages in a quick manner.</description>
    <inlineHelpText>Copy the entire link to the Facebook page associated with this account here.  This field is different than the Facebook connection at the top of the Account screen in that this allows reporting and posting to multiple Facebook pages in a quick manner.</inlineHelpText>
    <label>Facebook URL</label>
    <type>Url</type>
</CustomField>