force-app/main/default/objects/Account/fields/Family_Type__c.field-meta.xml
<CustomField>
    <fullName>Family_Type__c</fullName>
    <label>Family Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Unmarried</fullName>
            </value>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Blended</fullName>
            </value>
            <value>
                <fullName>With children</fullName>
            </value>
            <value>
                <fullName>Divorced</fullName>
            </value>
            <value>
                <fullName>Widowed</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>