force-app/main/default/objects/Account/fields/FamilyLife_Branded_Ministry__c.field-meta.xml
<CustomField>
    <fullName>FamilyLife_Branded_Ministry__c</fullName>
    <description>Global Dept Use:  Country primarily using FL-branded material</description>
    <inlineHelpText>The ministry is primarily using FamilyLife-branded materials.</inlineHelpText>
    <label>FamilyLife-Branded Ministry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Strongly Disagree</fullName>
            </value>
            <value>
                <fullName>2 - Disagree</fullName>
            </value>
            <value>
                <fullName>3 - Neither Agree Nor Disagree</fullName>
            </value>
            <value>
                <fullName>4 - Agree</fullName>
            </value>
            <value>
                <fullName>5 - Strongly Agree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>