force-app/main/default/objects/Account/fields/FamilyLife_Resource_Usage__c.field-meta.xml
<CustomField>
    <fullName>FamilyLife_Resource_Usage__c</fullName>
    <description>Global Dept Use - Where are FL Resources being used in country?</description>
    <inlineHelpText>There is reasonable evidence that there are people using FamilyLife resources in one location or several different locations.</inlineHelpText>
    <label>FamilyLife Resource Usage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>One Location</fullName>
            </value>
            <value>
                <fullName>Multiple Locations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>