force-app/main/default/objects/Account/fields/Financial_Structure__c.field-meta.xml
<CustomField>
    <fullName>Financial_Structure__c</fullName>
    <description>Used by Development</description>
    <label>Financial Structure</label>
    <type>TextArea</type>
</CustomField>