force-app/main/default/objects/Account/fields/Financial_Sustainability__c.field-meta.xml
<CustomField>
    <fullName>Financial_Sustainability__c</fullName>
    <description>Global Dept Use:  Country has sustainable finances?</description>
    <inlineHelpText>The ministry has financially-sustainable practices, e.g. they charge enough for materials and event registrations to cover their costs.</inlineHelpText>
    <label>Financial Sustainability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Strongly Disagree</fullName>
            </value>
            <value>
                <fullName>2 - Disagree</fullName>
            </value>
            <value>
                <fullName>3 - Neither Agree Nor Disagree</fullName>
            </value>
            <value>
                <fullName>4 - Agree</fullName>
            </value>
            <value>
                <fullName>5 - Strongly Agree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>