force-app/main/default/objects/Account/fields/Five9_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Five9_Contact_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>For data migration purposes only.</inlineHelpText>
    <label>Five9 Contact ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>