force-app/main/default/objects/Account/fields/FL_Connection__c.field-meta.xml
<CustomField>
    <fullName>FL_Connection__c</fullName>
    <label>FL Connection</label>
    <type>TextArea</type>
</CustomField>