force-app/main/default/objects/Account/fields/FL_Parnter_Lapsed__c.field-meta.xml
<CustomField>
    <fullName>FL_Parnter_Lapsed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FL Parnter Lapsed</label>
    <type>Checkbox</type>
</CustomField>