force-app/main/default/objects/Account/fields/FL_Partner__c.field-meta.xml
<CustomField>
    <fullName>FL_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FL Partner</label>
    <type>Checkbox</type>
</CustomField>