force-app/main/default/objects/Account/fields/FL_Partner_Soon__c.field-meta.xml
<CustomField>
    <fullName>FL_Partner_Soon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FL Partner Soon To Lapse</label>
    <type>Checkbox</type>
</CustomField>