force-app/main/default/objects/Account/fields/FL_Partner_Status__c.field-meta.xml
<CustomField>
    <fullName>FL_Partner_Status__c</fullName>
    <formula>IF(AND(FL_Partner__c = TRUE,FL_Partner_Soon__c = FALSE,FL_Parnter_Lapsed__c = FALSE), &apos;Active Partner&apos;,IF( AND(FL_Partner__c = TRUE,FL_Partner_Soon__c = TRUE,FL_Parnter_Lapsed__c = FALSE), &apos;Partner is Soon to Lapse&apos;,IF( AND(FL_Partner__c = TRUE,FL_Partner_Soon__c = TRUE,FL_Parnter_Lapsed__c = TRUE),&apos;Partner Lapsed&apos;,&apos;None&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Partner Status based on Giving History</inlineHelpText>
    <label>Partner Status</label>
    <type>Text</type>
</CustomField>