force-app/main/default/objects/Account/fields/FL_welcomed__c.field-meta.xml
<CustomField>
    <fullName>FL_welcomed__c</fullName>
    <label>FLP welcomed</label>
    <type>Date</type>
</CustomField>