force-app/main/default/objects/Account/fields/Follow_up_Practices__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Practices__c</fullName>
    <description>Global Dept Use:  Follow-up after in-country training and events?</description>
    <inlineHelpText>Effective and timely follow-up practices are used after training and events.</inlineHelpText>
    <label>Follow-up Practices</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Strongly Disagree</fullName>
            </value>
            <value>
                <fullName>2 - Disagree</fullName>
            </value>
            <value>
                <fullName>3 - Neither Agree Nor Disagree</fullName>
            </value>
            <value>
                <fullName>4 - Agree</fullName>
            </value>
            <value>
                <fullName>5 - Strongly Agree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>