force-app/main/default/objects/Account/fields/General_File_Lift_Program__c.field-meta.xml
<CustomField>
    <fullName>General_File_Lift_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this household part of the General File Lift Program</inlineHelpText>
    <label>General File Lift Program</label>
    <type>Checkbox</type>
</CustomField>