force-app/main/default/objects/Account/fields/Generic_Account_Email__c.field-meta.xml
<CustomField>
    <fullName>Generic_Account_Email__c</fullName>
    <description>This was added as per CCB decision 12/4/2014:  The purpose of this email is to capture generic non-Contact specific emails such as infor@familylife.com</description>
    <inlineHelpText>Enter only email addresses that are genric in nature, not tied to a specific Contact.  An example would be info@familylife.com.  If the email goes to a specific person, then it should be entered under the Contact&apos;s record.</inlineHelpText>
    <label>Generic Non-Personal Email</label>
    <type>Email</type>
</CustomField>