force-app/main/default/objects/Account/fields/GiftCapacityRange__c.field-meta.xml
<CustomField>
    <fullName>GiftCapacityRange__c</fullName>
    <formula>Result__r.WE_FW8_NP__GiftCapacityRange__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gift Capacity Range</label>
    <type>Text</type>
</CustomField>