force-app/main/default/objects/Account/fields/Gifts_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Gifts_12_Months__c</fullName>
    <label>Gifts 12 Months</label>
    <summaryFilterItems>
        <field>Donation__c.Gift_Within_Last_12_Months__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Donation__c.Account_Household__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>