force-app/main/default/objects/Account/fields/Giving_Amount__c.field-meta.xml
<CustomField>
    <fullName>Giving_Amount__c</fullName>
    <inlineHelpText>The total sum of all donations associated with this account. This sum includes adjustments.</inlineHelpText>
    <label>Giving Amount</label>
    <summarizedField>Donation__c.Gift_Amount__c</summarizedField>
    <summaryForeignKey>Donation__c.Account_Household__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>