force-app/main/default/objects/Account/fields/Giving_Average__c.field-meta.xml
<CustomField>
    <fullName>Giving_Average__c</fullName>
    <description>Calculated by Dividing Giving Amount by Giving Count</description>
    <formula>Giving_Amount__c / Giving_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated by Dividing Giving Amount by Giving Count and excludes adjustments.</inlineHelpText>
    <label>Giving Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>