force-app/main/default/objects/Account/fields/Giving_Count__c.field-meta.xml
<CustomField>
    <fullName>Giving_Count__c</fullName>
    <description>This is the number of true donations. Note there may be more records listed in Donations. The list includes adjustments. This number does not count adjustments so the Average Gift Calculation excludes adjustments.</description>
    <inlineHelpText>This is the number of true donations. Note there may be more records listed in Donations. The list includes adjustments. This number does not count adjustments so the Average Gift Calculation excludes adjustments.</inlineHelpText>
    <label>Giving Count</label>
    <summarizedField>Donation__c.Gift__c</summarizedField>
    <summaryForeignKey>Donation__c.Account_Household__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>