force-app/main/default/objects/Account/fields/Giving_First__c.field-meta.xml
<CustomField>
    <fullName>Giving_First__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Amount of first gift/donation.</inlineHelpText>
    <label>Giving First</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>