force-app/main/default/objects/Account/fields/Giving_First_Date__c.field-meta.xml
<CustomField>
    <fullName>Giving_First_Date__c</fullName>
    <inlineHelpText>First donation date</inlineHelpText>
    <label>Giving First Date</label>
    <type>Date</type>
</CustomField>