force-app/main/default/objects/Account/fields/Giving_Largest__c.field-meta.xml
<CustomField>
    <fullName>Giving_Largest__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Largest gift amount.</inlineHelpText>
    <label>Giving Largest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>