force-app/main/default/objects/Account/fields/Giving_Largest_Date__c.field-meta.xml
<CustomField>
    <fullName>Giving_Largest_Date__c</fullName>
    <inlineHelpText>Most recent date of the largest gift.</inlineHelpText>
    <label>Giving Largest Date</label>
    <type>Date</type>
</CustomField>