force-app/main/default/objects/Account/fields/Giving_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Giving_Last_12_Months__c</fullName>
    <description>Total giving for this account during the past 12 months</description>
    <inlineHelpText>Rolling &quot;Last 12 Months&quot;</inlineHelpText>
    <label>Giving Last 12 Months</label>
    <summarizedField>Donation__c.Gift_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Donation__c.Gift_Within_Last_12_Months__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Donation__c.Account_Household__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>