force-app/main/default/objects/Account/fields/Giving_Last__c.field-meta.xml
<CustomField>
    <fullName>Giving_Last__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Most recent gift/donation.</inlineHelpText>
    <label>Giving Last</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>