force-app/main/default/objects/Account/fields/Giving_Last_Date__c.field-meta.xml
<CustomField>
    <fullName>Giving_Last_Date__c</fullName>
    <inlineHelpText>Date of most recent donation.</inlineHelpText>
    <label>Giving Last Date</label>
    <type>Date</type>
</CustomField>