force-app/main/default/objects/Account/fields/Global_Outreach_POC__c.field-meta.xml
<CustomField>
    <fullName>Global_Outreach_POC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Global Dept Use:  Country Point of Contact (POC)</description>
    <inlineHelpText>Who is the FamilyLife Global Outreach Team Member who is the Point of Contact (POC) for this country ?</inlineHelpText>
    <label>Global Outreach POC</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts / Households (Global Outreach POC)</relationshipLabel>
    <relationshipName>Global_Outreach_POC</relationshipName>
    <type>Lookup</type>
</CustomField>