force-app/main/default/objects/Account/fields/Global_Region__c.field-meta.xml
<CustomField>
    <fullName>Global_Region__c</fullName>
    <label>Global Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Albanian: : Kosova ou Kosovë,</fullName>
            </value>
            <value>
                <fullName>Antarctica</fullName>
            </value>
            <value>
                <fullName>Arabian Peninsula, Middle East</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Caribbean</fullName>
            </value>
            <value>
                <fullName>Caribbean, parts of the Bahamas island chain.</fullName>
            </value>
            <value>
                <fullName>Caucasus, Western Asia</fullName>
            </value>
            <value>
                <fullName>Central Africa</fullName>
            </value>
            <value>
                <fullName>Central America</fullName>
            </value>
            <value>
                <fullName>Central Asia</fullName>
            </value>
            <value>
                <fullName>Central East South America</fullName>
            </value>
            <value>
                <fullName>Central Eastern South America</fullName>
            </value>
            <value>
                <fullName>Central South America</fullName>
            </value>
            <value>
                <fullName>East-Central Africa</fullName>
            </value>
            <value>
                <fullName>Eastern Africa</fullName>
            </value>
            <value>
                <fullName>Eastern Africa, African Great Lakes</fullName>
            </value>
            <value>
                <fullName>Eastern Asia</fullName>
            </value>
            <value>
                <fullName>Eastern Europe</fullName>
            </value>
            <value>
                <fullName>Eastern Europe - Northern Asia</fullName>
            </value>
            <value>
                <fullName>Greater Antilles, Caribbean</fullName>
            </value>
            <value>
                <fullName>Leeward Islands, Caribbean</fullName>
            </value>
            <value>
                <fullName>Lesser Antilles, Caribbean</fullName>
            </value>
            <value>
                <fullName>Maritime South-East Asia</fullName>
            </value>
            <value>
                <fullName>Maritime Southeast Asia, Melanesia, Oceania</fullName>
            </value>
            <value>
                <fullName>Mediterranean, Western Asia</fullName>
            </value>
            <value>
                <fullName>Melanesia, Oceania</fullName>
            </value>
            <value>
                <fullName>Micronesia, Oceania</fullName>
            </value>
            <value>
                <fullName>Middle East</fullName>
            </value>
            <value>
                <fullName>Middle East, Western Asia</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>