force-app/main/default/objects/Account/fields/GM_CRU_ID__c.field-meta.xml
<CustomField>
    <fullName>GM_CRU_ID__c</fullName>
    <inlineHelpText>For Data Migration Purposes Only. CRU ID in the GM Company field.</inlineHelpText>
    <label>GM CRU ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>