force-app/main/default/objects/Account/fields/GM_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>GM_Data_Source__c</fullName>
    <inlineHelpText>For data migration purposes only. QC import value.</inlineHelpText>
    <label>GM Data Source</label>
    <length>10</length>
    <type>Text</type>
</CustomField>