force-app/main/default/objects/Account/fields/GM_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>GM_Last_Modified_Date__c</fullName>
    <label>GM Last Modified Date</label>
    <type>DateTime</type>
</CustomField>